feat: Login&Register for front-end

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroui/dropdown": "^2.3.13",
     "@heroui/form": "^2.1.12",
     "@heroui/input": "2.4.10",
+    "@heroui/input-otp": "^2.1.12",
     "@heroui/kbd": "2.2.7",
     "@heroui/link": "2.2.8",
     "@heroui/listbox": "2.3.10",
@@ -31,6 +32,7 @@
     "@next/mdx": "^15.1.7",
     "@react-aria/visually-hidden": "3.8.18",
     "@types/js-cookie": "^3.0.6",
+    "axios": "^1.7.9",
     "clsx": "2.1.1",
     "framer-motion": "11.13.1",
     "intl-messageformat": "^10.7.15",
