--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@typescript-eslint/parser": "8.11.0",
     "autoprefixer": "10.4.19",
     "eslint": "^8.57.1",
+    "eslint-config-next": "^15.2.2",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
